--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -1,62 +1,33 @@
-<div class="main-content">
+<div class="main-content page-container">
   <div class="container-fluid">
-
-
-  
-
-<div class="row">
-  <mat-form-field>
-    <input
-      matInput
-      (keyup)="applyFilterOne($event.target.value)"
-      placeholder="Filter"
-    />
-  </mat-form-field>
-  <table
-    mat-table
-    matSort
-    [dataSource]="dataSourceOne"cx 
-    #TableOneSort="matSort"
-    class="mat-elevation-z8"
-    style="width: 25%;"
-  >
-    
-
-    <!-- sno Column -->
-    <ng-container matColumnDef="sno">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef>S.No</th>
-      <td mat-cell *matCellDef="let element">{{ element.sno }}</td>
-    </ng-container>
-
-    <!-- filename Column -->
-    <ng-container matColumnDef="filename">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>FileName</th>
-      <td mat-cell *matCellDef="let element">{{ element.filename}}</td>
-    </ng-container>
-
-    <!-- size Column -->
-    <ng-container matColumnDef="size">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
-      <td mat-cell *matCellDef="let element">{{ element.size }}</td>
-    </ng-container>
-
-    <!-- status Column -->
-    <ng-container matColumnDef="status">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-      <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-    </ng-container>
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumnsOne"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumnsOne"></tr>
-  </table>
-
-  
-  </div><mat-paginator
-  #TableOnePaginator="matPaginator"
-  [pageSize]="3"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-></mat-paginator></div></div>
+    <div class="row">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Filter"/>
+      </mat-form-field>
+      <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
+        <ng-container matColumnDef="sno">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef>S.No</th>
+          <td mat-cell *matCellDef="let element">{{ element.Id }}</td>
+        </ng-container>
+        <ng-container matColumnDef="filename">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>File Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.FileName}}</td>
+        </ng-container>
+        <ng-container matColumnDef="size">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>File Size</th>
+          <td mat-cell *matCellDef="let element">{{ element.FileSize }}</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+          <td mat-cell *matCellDef="let element">{{ element.Status}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsOne"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsOne"></tr>
+      </table>
+    </div>
+    <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+</div>
 
 
 
