--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-10"></div>
       <div class="col-md-2 zero-padding-right align-right" >
-        <button class="btn-action" mat-raised-button [routerLink]="['/usercreation']">Create User</button>
+        <button class="btn-action" mat-raised-button [routerLink]="['/usercreation',0,false]">Create User</button>
       </div>
     </div>
     <div class="row">
@@ -50,13 +50,13 @@
                     <ng-container matColumnDef="action">
                           <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
                               <td mat-cell *matCellDef="let element">
-                                          <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                              <mat-icon>visibility</mat-icon>
-                                          </button>
-                                    <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                            <mat-icon>edit</mat-icon>
-                                    </button>
-                                      <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                  <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,true]">
+                                      <mat-icon>visibility</mat-icon>
+                                  </button>
+                                  <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,false]">
+                                          <mat-icon>edit</mat-icon>
+                                  </button>
+                                      <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                           <mat-icon>delete</mat-icon>
                                       </button>
                                       <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
