--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -12,7 +12,7 @@
                   <div class="col-md-3">
                     <mat-form-field >
                       <mat-label>User Role</mat-label>
-                      <mat-select formControlName="RoleId" name="RoleId">
+                      <mat-select formControlName="RoleId" name="RoleId" [disabled]="isVisible">
                         <mat-option *ngFor="let role of roleList" [value]="role.Key">
                           {{role.Value}}
                         </mat-option>
@@ -22,57 +22,57 @@
                   </div>
                   <div class="col-md-3">
                     <mat-form-field class="example-full-width">
-                      <input matInput placeholder="User Id" formControlName="UserId">
+                      <input matInput placeholder="User Id" formControlName="Username" [disabled]="isVisible">
                       <!-- <small [hidden]="userForm.controls.UserName.valid||(userForm.controls.UserName.pristine)">Require a Valid Input</small> -->
                     </mat-form-field>
                   </div>
-                    <div class="col-md-3">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="Name" formControlName="name">
-                          <!-- <small [hidden]="userForm.controls.UserName.valid||(userForm.controls.UserName.pristine)">Require a Valid Input</small> -->
-                        </mat-form-field>
-                    </div>
+                  <div class="col-md-3" *ngIf="userForm.controls.RoleId.value == 5">
+                      <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Name" formControlName="name" [disabled]="isVisible">
+                        <!-- <small [hidden]="userForm.controls.UserName.valid||(userForm.controls.UserName.pristine)">Require a Valid Input</small> -->
+                      </mat-form-field>
+                  </div>
                     
                     <div class="col-md-3">
                         <mat-form-field class="example-full-width">
-                          <input matInput placeholder="Password" type="password" formControlName="Password">
+                          <input matInput placeholder="Password" type="password" formControlName="Password" [disabled]="isVisible">
                           <!-- <small [hidden]="userForm.controls.Password.valid||(userForm.controls.Password.pristine)">Require a Valid Input</small> -->
                         </mat-form-field>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="userForm.controls.RoleId.value == 5">
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Folder FilePath" type="text" formControlName="FolderFilePath">
+                        <input matInput placeholder="Folder FilePath" type="text" formControlName="FolderFilePath" [disabled]="isVisible">
                         <!-- <small [hidden]="userForm.controls.FolderFilePath.valid||(userForm.controls.FolderFilePath.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="AutoSyncTime" type="time" formControlName="AutoSyncTime" value="13:00">
+                        <input matInput placeholder="AutoSyncTime" type="time" formControlName="AutoSyncTime" value="13:00" [disabled]="isVisible">
                         <!-- <small [hidden]="userForm.controls.DeviceId.valid||(userForm.controls.DeviceId.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                 </div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="userForm.controls.RoleId.value == 5">
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Device Id" type="text" formControlName="DeviceId">
+                        <input matInput placeholder="Device Id" type="text" formControlName="DeviceId" [disabled]="isVisible">
                         <!-- <small [hidden]="userForm.controls.DeviceId.valid||(userForm.controls.DeviceId.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Auto Delete Time" type="time" formControlName="AutoSyncTime" value="13:00" >
+                        <input matInput placeholder="Auto Delete Time" type="time" formControlName="AutoSyncTime" value="" [disabled]="isVisible">
                         <!-- <small [hidden]="userForm.controls.Supervisor.valid||(userForm.controls.Supervisor.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="userForm.controls.RoleId.value == 5">
                     <div class="col-md-6">
                       <mat-form-field >
                         <mat-label>Supervisor</mat-label>
-                        <mat-select formControlName="SupervisorId" name="SupervisorId">
+                        <mat-select formControlName="SupervisorId" name="SupervisorId" [disabled]="isVisible"> 
                           <mat-option *ngFor="let supervisor of supervisorList" [value]="supervisor.Key">
                             {{supervisor.Value}}
                           </mat-option>
@@ -90,6 +90,7 @@
                     </div>
                 </div>
                 <button  mat-raised-button type="submit" class="btn btn-action pull-right">Save</button>
+                <button  mat-raised-button type="button" class="btn btn-action back-btn pull-right" color="warn" [routerLink]="['/userlist']">Back</button>
                 <div class="clearfix"></div>
             </form>
         </div>
