--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="main-content page-container">
     <div class="container-fluid">
         <div class="row"><div class="col-lg-6"></div>
-        <div class="col-lg-3">          
+        <!-- <div class="col-lg-3">          
             <mat-form-field appearance="fill">
                 <mat-label>Choose a date</mat-label>
                 <input matInput [matDatepicker]="picker">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field></div>
-        <div class="col-lg-3"> <div class="navbar-collapse justify-content-end" id="navigation">
+              </mat-form-field></div> -->
+        <!-- <div class="col-lg-3"> <div class="navbar-collapse justify-content-end" id="navigation">
             <form class="navbar-form">
                 <div class="input-group no-border form-bg-color">
                     <input style="height:52px; padding-left:10px" type="text" value="" class="form-control" placeholder="Search...">
@@ -18,7 +18,8 @@
                     </button>
                 </div>
             </form>        
-        </div></div>
+        </div> -->
+    <!-- </div> -->
     </div>       
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
