--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -7,7 +7,7 @@
       <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
         <ng-container matColumnDef="sno">
           <th class="tab-head" mat-header-cell *matHeaderCellDef>S.No</th>
-          <td mat-cell *matCellDef="let element">{{ element.Id }}</td>
+          <td mat-cell *matCellDef="let element; let i =index;">{{i+1}}</td>
         </ng-container>
         <ng-container matColumnDef="filename">
           <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>File Name</th>
@@ -28,114 +28,3 @@
     <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- <mat-form-field>
-    <input
-      matInput
-      (keyup)="applyFilterTwo($event.target.value)"
-      placeholder="Filter"
-    />
-  </mat-form-field>
-   <table
-    mat-table
-    matSort
-    [dataSource]="dataSourceTwo"
-    #TableTwoSort="matSort"
-    class="mat-elevation-z8"
-    style="width: 100%;"
-  > -->
-    <!-- Note that these columns can be defined in any order.
-                The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- sno Column -->
-    <!-- <ng-container matColumnDef="sno">
-      <th mat-header-cell *matHeaderCellDef>S.No</th>
-      <td mat-cell *matCellDef="let element">{{ element.sno }}</td>
-    </ng-container> -->
-
-    <!-- filename Column -->
-    <!-- <ng-container matColumnDef="filename">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>FileName</th>
-      <td mat-cell *matCellDef="let element">{{ element.filename }}</td>
-    </ng-container> -->
-
-    <!-- Size Column -->
-    <!-- <ng-container matColumnDef="size">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
-      <td mat-cell *matCellDef="let element">{{ element.size }}</td>
-    </ng-container> -->
-
-    <!-- Status Column -->
-    <!-- <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-      <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumnsTwo"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumnsTwo"></tr>
-  </table> -->
-
-  <!-- <mat-paginator
-    #TableTwoPaginator="matPaginator"
-    [pageSize]="3"
-    [pageSizeOptions]="[5, 10, 25, 100]"
-  ></mat-paginator>
-</div> --> 
