--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -8,18 +8,23 @@
     </div>
     <div class="row">
       <table mat-table [dataSource]="dataSource" matSort class="col-md-12">
-
           <!-- S.No Column -->
               <ng-container matColumnDef="sno">
                 <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-                <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+                <td mat-cell *matCellDef="let element; let i =index;">{{i+1}} </td>
               </ng-container>
         
           <!-- User Name Column -->
               <ng-container matColumnDef="username">
-                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
                 <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
               </ng-container> 
+
+           <!-- Name Column -->
+           <ng-container matColumnDef="name">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+          </ng-container>    
         
           <!-- Job title Column -->
                 <ng-container matColumnDef="RoleName">
@@ -42,7 +47,7 @@
             <!-- Device Id Column -->
                 <ng-container matColumnDef="Deviceid">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device Id</th>
-                  <td mat-cell *matCellDef="let element"> {{element.Deviceid}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.DeviceId}} </td>
                 </ng-container>
 
 
@@ -53,7 +58,7 @@
                                           <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                               <mat-icon>visibility</mat-icon>
                                           </button>
-                                    <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                    <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                             <mat-icon>edit</mat-icon>
                                     </button>
                                       <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
@@ -61,7 +66,7 @@
                                       </button>
                                       <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                         <mat-icon>person</mat-icon>
-                                      </button> -->
+                                      </button>
                                 </td>
                   </ng-container>
                 
