--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -29,7 +29,7 @@
             <!-- S.No Column -->
             <ng-container matColumnDef="Id">
               <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id </th>
-              <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+              <td mat-cell *matCellDef="let i = index"> {{i + 1}} </td>
             </ng-container>
           
             <!-- Job Unique Id Column -->
