--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -1,18 +1,19 @@
 <div class="main-content page-container">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-10"></div>
-      <div class="col-md-2 zero-padding-right align-right" >
-        <button class="btn-action" mat-raised-button [routerLink]="['/usercreation',0,false]">Create User</button>
+      <div class="col-md-9"></div>
+      <div class="col-md-3 pull-right" >
+        <button class="btn btn-action pull-right btn-create" mat-raised-button [routerLink]="['/usercreation',0,false]">Create User</button>
+        <button mat-raised-button class="btn btn-action pull-right btn-export"  (click)="exportAsExcel()">Excel</button>
       </div>
     </div>
-    <div class="row">
-      <table mat-table [dataSource]="dataSource" matSort class="col-md-12">
+    <div class="row" #TABLE>
+      <table mat-table [dataSource]="dataSource" #table matSort class="col-md-12">
 
           <!-- S.No Column -->
               <ng-container matColumnDef="sno">
                 <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-                <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+                <td mat-cell *matCellDef="let i = index"> {{i + 1}} </td>
               </ng-container>
         
           <!-- User Name Column -->
