--- a/src/styles.css
+++ b/src/styles.css
@@ -18,8 +18,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 10px 15px !important;
 }
 
-button[type=submit]{
+button[type=submit], .btn-create{
     background-color:  #0d7bb9 !important;
+}
+.btn-export{
+    background-color: #008000 !important;
 }
 
 tr.mat-row{
