--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 input{
   color: white ;
 }
@@ -27,6 +29,9 @@ input{
     color:white;
 
 }
+mat-label {
+  color: #fff !important;
+}
 .login-form-2 h3{
   text-align: center;
   color: #fff;
@@ -34,7 +39,7 @@ input{
 .login-form-2 .btnSubmit{
   font-weight: 600;
   color: #0e7bb9;
-  background-color: #fff;
+ 
   padding: 9px;
   border-radius: 18px;
 }
@@ -49,7 +54,7 @@ input{
   margin-bottom: 20px;
 }
 .error{
-  font-size: 13px;
+  font-size: 14px;
   font-weight: bold;
-  font-family: 'Roboto';
+  font-family: 'Montserrat', sans-serif;
 }
