--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -26,7 +26,7 @@
             <!-- S.No Column -->
             <ng-container matColumnDef="Id">
               <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id </th>
-              <td mat-cell *matCellDef="let i = index"> {{i + 1}} </td>
+              <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
             </ng-container>
           
             <!-- Job Unique Id Column -->
@@ -60,16 +60,16 @@
           </ng-container> 
 
           <!-- Photo Column -->
-          <!-- <ng-container matColumnDef="Photo">
+          <ng-container matColumnDef="Photo">
             <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
-            <td mat-cell *matCellDef="let element" > {{element.Photos.Total}} / {{element.Photos.Completed}}</td>
-          </ng-container> -->
+            <td mat-cell *matCellDef="let element" > {{(element.Photos != null)  ? element.Photos.Total + "/" + element.Photos.Completed : 0}}</td>
+          </ng-container> 
 
           <!-- Excel Column -->
-          <!-- <ng-container matColumnDef="Excel">
+          <ng-container matColumnDef="Excel">
             <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Excel</th>
-            <td mat-cell *matCellDef="let element"> {{element.Excel.Total}} / {{element.Excel.Completed}}</td>
-          </ng-container> -->
+            <td mat-cell *matCellDef="let element"> {{(element.Excel != null)  ? element.Excel.Total + "/" + element.Excel.Completed : 0}}</td>
+          </ng-container>
 
             <!-- Status Column -->
             <ng-container matColumnDef="Status">
