--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -13,7 +13,7 @@
           <!-- S.No Column -->
               <ng-container matColumnDef="sno">
                 <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-                <td mat-cell *matCellDef="let i = index"> {{i + 1}} </td>
+                <td mat-cell *matCellDef="let element,let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
               </ng-container>
         
           <!-- User Name Column -->
@@ -54,23 +54,23 @@
 
 
             <!-- Action ID Column -->
-                    <ng-container matColumnDef="action">
-                          <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
-                              <td mat-cell *matCellDef="let element">
-                                  <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,true]">
-                                      <mat-icon>visibility</mat-icon>
-                                  </button>
-                                  <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,false]">
-                                          <mat-icon>edit</mat-icon>
-                                  </button>
-                                      <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                          <mat-icon>delete</mat-icon>
-                                      </button>
-                                      <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                        <mat-icon>person</mat-icon>
-                                      </button>
-                                </td>
-                  </ng-container>
+                <ng-container matColumnDef="action">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
+                  <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,true]">
+                        <mat-icon>visibility</mat-icon>
+                    </button>
+                    <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,false]">
+                            <mat-icon>edit</mat-icon>
+                    </button>
+                      <button mat-icon-button color="blue" (click)="deleteUser(element)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                    <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                      <mat-icon>person</mat-icon>
+                    </button> -->
+                  </td>
+                </ng-container>
                 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
