--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -40,13 +40,13 @@
         
             <!-- folderpath Column -->
                 <ng-container matColumnDef="FolderFilePath">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> folderpath</th>
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Folder Path</th>
                     <td mat-cell *matCellDef="let element"> {{element.FolderFilePath}} </td>
                 </ng-container>
 
             <!-- Device Id Column -->
                 <ng-container matColumnDef="Deviceid">
-                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device Id</th>
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device ID</th>
                   <td mat-cell *matCellDef="let element"> {{element.DeviceId}} </td>
                 </ng-container>
 
