--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
                         <div class="card-icon lightcoral">
                             <i class="material-icons">store</i>
                         </div>
-                        <p class="card-category">Quality Check Users</p>
+                        <p class="card-category"><b>Quality Check Users</b></p>
                         <h3 class="card-title">245</h3>
                     </div>
                     <div class="card-footer">
@@ -62,7 +62,7 @@
                         <div class="card-icon lightcoral">
                             <i class="material-icons">people</i>
                         </div>
-                        <p class="card-category">Admins</p>
+                        <p class="card-category"><b>Admins</b></p>
                         <h3 class="card-title">3</h3>
                     </div>
                     <div class="card-footer">
