--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -25,7 +25,7 @@
         <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
             <!-- S.No Column -->
             <ng-container matColumnDef="Id">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id </th>
+              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No</th>
               <td mat-cell *matCellDef="let element; let i =index;">{{i+1}} </td>
             </ng-container>
           
