--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -43,13 +43,13 @@
                 <div class="row">
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Folder FilePath" type="text" formControlName="FolderFilePath">
+                        <input matInput placeholder="Folder FilePath" type="text" formControlName="FolderPath">
                         <!-- <small [hidden]="userForm.controls.FolderFilePath.valid||(userForm.controls.FolderFilePath.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="AutoSyncTime" type="time" formControlName="AutoSyncTime" value="13:00">
+                        <input matInput placeholder="AutoSyncTime" type="time" formControlName="Auto Sync Time" value="13:00">
                         <!-- <small [hidden]="userForm.controls.DeviceId.valid||(userForm.controls.DeviceId.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                 </div>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Auto Delete Time" type="number" formControlName="AutoDeleteInterval" >
+                        <input matInput placeholder="Auto Delete Time" type="number" formControlName="Auto Delete Interval" >
                         <!-- <small [hidden]="userForm.controls.Supervisor.valid||(userForm.controls.Supervisor.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                     </div>
