--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -25,13 +25,8 @@
         <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
             <!-- S.No Column -->
             <ng-container matColumnDef="Id">
-<<<<<<< HEAD
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No</th>
-              <td mat-cell *matCellDef="let element; let i =index;">{{i+1}} </td>
-=======
               <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id </th>
               <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
->>>>>>> b84c15f3aa1a24885a0371ca50a93dbce845e68d
             </ng-container>
           
             <!-- Job Unique Id Column -->
@@ -42,7 +37,7 @@
 
             <!-- User ID Column -->
             <ng-container matColumnDef="Username">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
               <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
             </ng-container>
           
