--- a/src/app/user-List/user-List.component.css
+++ b/src/app/user-List/user-List.component.css
@@ -39,3 +39,12 @@ table {
 .card {
   margin-top: 10px !important;
 }
+button.btn.btn-default, .mat-raised-button.btn, .mat-raised-button.btn.btn-default, .mat-raised-button.btn:not([class*=mat-elevation-z]), .mat-raised-button.btn:not([class*=mat-elevation-z]).btn-default, .btn, .btn.btn-default {
+  color: #fff;
+  background-color: #999999;
+  border-color: #999999;
+  box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
+  padding-right: 17px;
+  text-align: center;
+}
+
