--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="AutoSyncTime" type="time" formControlName="AutoSyncTime" value="23:11:00">
+                        <input matInput placeholder="AutoSyncTime" type="time" formControlName="AutoSyncTime" >
                       </mat-form-field>
                 </div>
                 </div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Auto Delete Time" type="time" formControlName="AutoSyncTime" value="">
+                        <input matInput placeholder="Auto Delete Time" type="number" formControlName="AutoSyncTime" >
                       </mat-form-field>
                     </div>
                 </div>
