--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -47,7 +47,7 @@
                 <div class="row" *ngIf="userForm.controls.RoleId.value == 5">
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Folder FilePath" type="text" formControlName="FolderFilePath">
+                        <input matInput placeholder="Folder Path" type="text" formControlName="FolderFilePath">
                       </mat-form-field>
                     </div>
                     <div class="col-md-6">
