--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                 <div class="input-group no-border">
                 </div>
             </form>
-            <ul class="navbar-nav">
+            <!-- <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)">
                         <i class="material-icons">person</i>
@@ -23,7 +23,14 @@
                         </p>
                     </a>
                 </li>
-            </ul>
+            </ul> -->
+            <div class="dropdown" style="margin-right: 12px;"> <i class="material-icons" data-toggle="dropdown">person</i>
+                <ul class="dropdown-menu dropdown-menu-right pointer">
+                  <li><a routerLink="login"> 
+                      <i class="material-icons">power_settings_new</i>Logout
+                    </a></li>
+                </ul>
+              </div>
             
         </div>
     </div>
