transfer status column

--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -80,7 +80,7 @@
                       </mat-form-field>
                     </div>
                     <div class="col-md-6">
-                      <mat-form-field appearance="fill">
+                      <mat-form-field >
                         <mat-label>AutoSyncDays</mat-label>
                         <mat-select formControlName="AutoSyncDays" multiple >
                           <mat-option *ngFor="let Days of AutoSyncDaysList" [value]="Days">{{Days}}</mat-option>
