--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -3,14 +3,15 @@
     <div class="row">
       <div class="col-md-3">  
         <mat-form-field>
-          <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Filter"/>
+          <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
         </mat-form-field>
       </div>
       <div class="col-md-8 row count pull-right">
-        <div class="col-md-5"></div>
-        <div class="col-md-3"> Image Size : {{imageCount}}</div>
-        <div class="col-md-2"> Bills : {{billCount}}</div>
-        <div class="col-md-2"> Reads : {{readCount}}</div>
+        <div class="col-md-1"></div>
+        <div class="col-md-2"> Username  : {{Username}}</div>
+        <div class="col-md-3"> Total No. Of Images  : {{imageCount}}</div>
+        <div class="col-md-4"> Bills : {{billCount}}</div>
+        <div class="col-md-4.2"> Reads : {{readCount}}</div>
       </div>
       <div class="col-md-1 pull-right" >
         <button  mat-raised-button type="button" class="btn btn-action back-btn pull-right" color="warn" [routerLink]="['/transferstatus']">Back</button>
