--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid">
       <div class="row"><div class="col-lg-6"></div>
         <div class="col-lg-3">          
-          <!-- <mat-form-field appearance="fill">
+          <mat-form-field >
               <mat-label>Choose a date</mat-label>
               <input matInput [matDatepicker]="picker">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field> -->
+            </mat-form-field>
         </div>
         <div class="col-lg-3 zero-padding-right"> 
           <div class="navbar-collapse justify-content-end" id="navigation">
@@ -28,6 +28,18 @@
               <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S.No </th>
               <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
             </ng-container>
+
+             <!-- Date Column -->
+             <ng-container matColumnDef="CreatedDate">
+              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+              <td mat-cell *matCellDef="let element"> {{element.CreatedDate}} </td>
+            </ng-container> 
+
+            <!-- Sync Type Column -->
+          <ng-container matColumnDef="SyncType">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Sync Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.SyncType}} </td>
+          </ng-container> 
           
             <!-- Job Unique Id Column -->
             <ng-container matColumnDef="JobUniqueId">
@@ -90,6 +102,6 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
       </div>
-      <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" [pageSizeOptions]="[3, 10, 25, 100]"></mat-paginator>
+      <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" ></mat-paginator>
   </div>
 </div>
