--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -1,10 +1,11 @@
 <div class="main-content page-container">
   <div class="container-fluid">
-      <div class="row"><div class="col-lg-6"></div>
+    <div class="row list-filter">
+        <div class="col-lg-6"></div>
         <div class="col-lg-3">          
           <mat-form-field >
               <mat-label>Choose a date</mat-label>
-              <input matInput [matDatepicker]="picker">
+              <input matInput [matDatepicker]="picker" [(ngModel)]="datepicker" name="datepicker" (ngModelChange)="changeDate()">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -12,96 +13,94 @@
         <div class="col-lg-3 zero-padding-right"> 
           <div class="navbar-collapse justify-content-end" id="navigation">
             <form class="navbar-form">
-                <!-- <div class="input-group no-border form-bg-color"> -->
-                    <mat-form-field>
-                      <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
-                    </mat-form-field>
-                <!-- </div> -->
+                <mat-form-field>
+                  <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
+                </mat-form-field>
             </form>        
           </div>
         </div>
-      </div>       
-      <div class="row">
-        <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
-            <!-- S.No Column -->
-            <ng-container matColumnDef="Sno">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S.No </th>
-              <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
-            </ng-container>
-
-             <!-- Date Column -->
-             <ng-container matColumnDef="CreatedDate">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-              <td mat-cell *matCellDef="let element"> {{element.CreatedDate}} </td>
-            </ng-container> 
-
-            <!-- Sync Type Column -->
-          <ng-container matColumnDef="SyncType">
-            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Sync Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.SyncType}} </td>
-          </ng-container> 
-          
-            <!-- Job Unique Id Column -->
-            <ng-container matColumnDef="JobUniqueId">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Transfer Id</th>
-              <td mat-cell *matCellDef="let element"> {{element.JobUniqueId}} </td>
-            </ng-container> 
-
-            <!-- User ID Column -->
-            <ng-container matColumnDef="Username">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
-            </ng-container>
-          
-            <!-- Supervisor Column -->
-            <ng-container matColumnDef="SupervisorName">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Supervisor</th>
-              <td mat-cell *matCellDef="let element"> {{element.SupervisorName}} </td>
-            </ng-container> 
-
-            <!-- TotalFileSize Column -->
-            <ng-container matColumnDef="TotalFileSize">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Size </th>
-              <td mat-cell *matCellDef="let element"> {{element.TotalFileSize}} </td>
-            </ng-container>
-
-            <!-- SourceFilePath Column -->
-          <ng-container matColumnDef="SourceFilePath">
-            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> SourceFilePath </th>
-            <td mat-cell *matCellDef="let element"> {{element.SourceFilePath}} </td>
-          </ng-container> 
-
-          <!-- Photo Column -->
-          <ng-container matColumnDef="Photo">
-            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
-            <td mat-cell *matCellDef="let element" > {{(element.Photos != null)  ? element.Photos.Total + "/" + element.Photos.Completed : 0}}</td>
-          </ng-container> 
-
-          <!-- Excel Column -->
-          <ng-container matColumnDef="Excel">
-            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Excel</th>
-            <td mat-cell *matCellDef="let element"> {{(element.Excel != null)  ? element.Excel.Total + "/" + element.Excel.Completed : 0}}</td>
+    </div>       
+    <div class="row">
+      <table mat-table matSort [dataSource]="selectedDataSource"cx #TableOneSort="matSort" class="col-md-12" >
+          <!-- S.No Column -->
+          <ng-container matColumnDef="Sno">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S.No </th>
+            <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
           </ng-container>
 
-            <!-- Status Column -->
-            <ng-container matColumnDef="Status">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Overall Status</th>
-              <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
-            </ng-container>
+            <!-- Date Column -->
+            <ng-container matColumnDef="CreatedDate">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+            <td mat-cell *matCellDef="let element"> {{element.CreatedDate | date:'dd/MM/yyyy'}} </td>
+          </ng-container> 
 
-            <!-- Action Column -->
-            <ng-container matColumnDef="action">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="blue" [routerLink]="['/imagestatus',element.Id]">
-                    <mat-icon>visibility</mat-icon>
-                </button></td>
-            </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </div>
-      <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" ></mat-paginator>
+          <!-- Sync Type Column -->
+        <ng-container matColumnDef="SyncType">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Sync Type </th>
+          <td mat-cell *matCellDef="let element" class="p-10"> {{element.SyncType}} </td>
+        </ng-container> 
+        
+          <!-- Job Unique Id Column -->
+          <ng-container matColumnDef="JobUniqueId">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Transfer Id</th>
+            <td mat-cell *matCellDef="let element"> {{element.JobUniqueId}} </td>
+          </ng-container> 
+
+          <!-- User ID Column -->
+          <ng-container matColumnDef="Username">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
+          </ng-container>
+        
+          <!-- Supervisor Column -->
+          <ng-container matColumnDef="SupervisorName">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Supervisor</th>
+            <td mat-cell *matCellDef="let element"> {{element.SupervisorName}} </td>
+          </ng-container> 
+
+          <!-- TotalFileSize Column -->
+          <ng-container matColumnDef="TotalFileSize">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Size </th>
+            <td mat-cell *matCellDef="let element"> {{element.TotalFileSize}} </td>
+          </ng-container>
+
+          <!-- SourceFilePath Column -->
+        <ng-container matColumnDef="SourceFilePath">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> SourceFilePath </th>
+          <td mat-cell *matCellDef="let element"> {{element.SourceFilePath}} </td>
+        </ng-container> 
+
+        <!-- Photo Column -->
+        <ng-container matColumnDef="Photo">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
+          <td mat-cell *matCellDef="let element" > {{(element.Photos != null)  ? element.Photos.Total + "/" + element.Photos.Completed : 0}}</td>
+        </ng-container> 
+
+        <!-- Excel Column -->
+        <ng-container matColumnDef="Excel">
+          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Excel</th>
+          <td mat-cell *matCellDef="let element"> {{(element.Excel != null)  ? element.Excel.Total + "/" + element.Excel.Completed : 0}}</td>
+        </ng-container>
+
+          <!-- Status Column -->
+          <ng-container matColumnDef="Status">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Overall Status</th>
+            <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
+          </ng-container>
+
+          <!-- Action Column -->
+          <ng-container matColumnDef="action">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="blue" [routerLink]="['/imagestatus',element.Id]">
+                  <mat-icon>visibility</mat-icon>
+              </button></td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" ></mat-paginator>
   </div>
 </div>
