--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-9"></div>
     <div class="col-md-3 pull-right" >
-      <button  mat-raised-button type="button" class="btn btn-action btn-create pull-right" (click)="userSave()" [hidden]="isVisible">Save</button>
+      <button  mat-raised-button type="button" class="btn btn-action btn-create pull-right" (click)="userSave()" [hidden]="isVisible">{{label}}</button>
       <button  mat-raised-button type="button" class="btn btn-action back-btn pull-right" color="warn" [routerLink]="['/userlist']">Back</button>
       <div class="clearfix"></div>
       </div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Auto Delete Time" type="number" formControlName="AutoSyncTime" >
+                        <input matInput placeholder="Auto Delete Time" type="number"  formControlName="AutoDeleteInterval" >
                       </mat-form-field>
                     </div>
                 </div>
