--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="row" #TABLE>
-      <table mat-table [dataSource]="selectDataSource" #table matSort class="col-md-12">
+      <table mat-table [dataSource]="selectDataSource" id="excel-table" #table matSort class="col-md-12">
         
           <!-- S.No Column -->
               <ng-container matColumnDef="sno">
