--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -20,8 +20,8 @@
           </div>
         </div>
     </div>       
-    <div class="row">
-      <table mat-table matSort [dataSource]="selectedDataSource"cx #TableOneSort="matSort" class="col-md-12" >
+    <div class="row" style="background-color: #fbfbfb">
+      <table  *ngIf="!isLoading" mat-table matSort [dataSource]="selectedDataSource"cx #TableOneSort="matSort" class="col-md-12" >
           <!-- S.No Column -->
           <ng-container matColumnDef="Sno">
             <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S.No </th>
@@ -100,6 +100,9 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+      <div style="width:450px;margin:8% auto;" *ngIf="isLoading">
+        <img src="../../assets//img//temp-loader.gif" alt="Please wait..." />
+    </div>
     </div>
     <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" ></mat-paginator>
   </div>
