--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -7,8 +7,7 @@
         </mat-form-field>
       </div>
       <div class="col-md-8 row count pull-right">
-        <div class="col-md-1"></div>
-        <div class="col-md-3" > <b>Username  : </b> {{Username}}</div>
+        <div class="col-md-4" > <b>TransferId : </b> {{trnasferId}}</div>
         <div class="col-md-4 "> <b>Total No. Of Images  :</b> {{imageCount}}</div>
         <div class="col-md-2 float-right"> <b>Bills : </b>{{billCount}}</div>
         <div class="col-md-2 float-right"> <b>Reads :</b> {{readCount}}</div>
