--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="logo-img">
           <img src="/assets/img/syn.png"/>  
         </div>
-        AutoSync
+        <b>AutoSync</b>
     </a>
 </div>
 <div class="sidebar-wrapper">
