--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -3,13 +3,13 @@
     <div class="row list-filter">
       <div class="col-md-2">
         <mat-form-field>
-          <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
+          <input matTooltip="Search by text" matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
         </mat-form-field>
       </div>
       <div class="col-md-2 pull-right">
         <mat-form-field >
-          <mat-label>Job Title</mat-label>
-          <mat-select [(ngModel)]="roleId" name="roleId" (ngModelChange)="roleChange()"> 
+          <mat-label >Job Title</mat-label>
+          <mat-select matTooltip="Select from DropDown" [(ngModel)]="roleId" name="roleId" (ngModelChange)="roleChange()"> 
             <mat-option *ngFor="let  role of  roleList" [value]=" role.Key">
               {{ role.Value}}
             </mat-option>
@@ -18,8 +18,8 @@
       </div>
       <div class="col-md-4"></div>
       <div class="col-md-4 float-right" >
-        <button mat-raised-button type="button" class="btn btn-action pull-right  btn-create"  [routerLink]="['/usercreation',0,false]">Create User</button>
-        <button mat-raised-button class="btn btn-action pull-right btn-export"  (click)="exportAsExcel()">Excel</button>
+        <button mat-raised-button matTooltip=" Click to create a new user" type="button" class="btn btn-action pull-right  btn-create"  [routerLink]="['/usercreation',0,false]">Create User</button>
+        <button mat-raised-button matTooltip=" Click to Import the table" class="btn btn-action pull-right btn-export"  (click)="exportAsExcel()">Excel</button>
       </div>
     </div>
     <div class="row" style="background-color: #fbfbfb" #TABLE>
@@ -67,31 +67,30 @@
                 <td mat-cell *matCellDef="let element"> {{element.DeviceId}} </td>
               </ng-container>
             <!-- Status Column -->
-            <ng-container matColumnDef="Status">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef>Status</th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="blue" [hidden]="!element.IsActive">
-                    <mat-icon>person</mat-icon>
-                </button>
-                <button mat-icon-button color="blue" [hidden]="element.IsActive">
-                        <mat-icon>person_add_disabled</mat-icon>
-                </button>
-              </td>
+            <ng-container matColumnDef="IsActive">
+              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+              <td mat-cell *matCellDef="let element "> {{element.IsActive}} </td>
             </ng-container>
             
             <!-- Action ID Column -->
                 <ng-container matColumnDef="action">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef style="padding-left: 35px;">Action</th>
                   <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,true]">
+                    <button mat-icon-button matTooltip="Click to View the User Details" color="blue" [routerLink]="['/usercreation',element.Id,true]">
                         <mat-icon>visibility</mat-icon>
                     </button>
-                    <button mat-icon-button color="blue" [routerLink]="['/usercreation',element.Id,false]">
+                    <button mat-icon-button matTooltip="Click to Edit the User Details"  color="blue" [routerLink]="['/usercreation',element.Id,false]">
                             <mat-icon>edit</mat-icon>
                     </button>
-                      <button mat-icon-button color="blue" (click)="deleteUser(element)">
+                        <button mat-icon-button matTooltip="Click to Inactivate the User" color="blue" (click)="changeActiveStatus(element)" [hidden]="!element.IsActive">
+                            <mat-icon>person</mat-icon>
+                        </button>
+                        <button mat-icon-button matTooltip="Click to Activate the User" color="blue" (click)="changeActiveStatus(element)" [hidden]="element.IsActive">
+                                <mat-icon>person_add_disabled</mat-icon>
+                        </button>
+                      <!-- <button mat-icon-button color="blue" (click)="deleteUser(element)">
                         <mat-icon>delete</mat-icon>
-                    </button>
+                    </button> -->
                     <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                       <mat-icon>person</mat-icon>
                     </button> -->
